syntax = "proto3";
package org.roylance.yadel.api.models;

import "google/protobuf/any.proto";

message WorkerStatusReport {
    repeated WorkerConfiguration worker_configurations = 1;
}

message WorkerConfiguration {
    string ip = 1;
    string port = 2;
    string host = 3;
    uint64 initialized_time = 4;
    WorkerState state = 5;
    ManagerToWorkerMessage last_manager_to_worker_message = 6;
    WorkerToManagerMessage last_worker_to_manager_message = 7;
}

message ServiceToManagerMessage {
    ServiceToManagerType type = 1;
    string name = 2;
    repeated google.protobuf.Any context = 3;
    SpawnMessage spawn_message = 4;
}

message ManagerToServiceMessage {
    WorkerStatusReport report = 1;
}

message ManagerToWorkerMessage {
    ManagerToWorkerMessageType type = 1;
    string name = 2;
    repeated google.protobuf.Any context = 3;
    SpawnMessage spawn_message = 4;
}

message WorkerToManagerMessage {
    WorkerToManagerMessageType type = 1;
    string name = 2;
    repeated google.protobuf.Any context = 3;
}

message SpawnMessage {
    string bash_command = 1;
    string host = 2;
    string port = 3;
    string seedHost1 = 4;
    string seedPort1 = 5;
    string seedHost2 = 6;
    string seedPort2 = 7;
}

enum WorkerState {
    WORKING = 0;
    IDLE = 1;
}

enum ServiceToManagerType {
    REPORT_WORKER_STATUS = 0;
    DO_NEW_WORK = 1;
    SPAWN_NEW_WORKER = 2;
    REDUCE_WORKER_COUNT = 3;
}

enum ManagerToWorkerMessageType {
    START_WORKING = 0;
    KILL_YOURSELF = 1;
    SPAWN_NEW_WORKER_AT_YOUR_LOCATION = 2;
}

enum WorkerToManagerMessageType {
    REGISTRATION = 0;
    NOW_WORKING = 1;
    NOW_IDLE = 2;
}

enum ActorRole {
    MANAGER = 0;
    WORKER = 1;
}